# SupplierMind

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARK.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  requirements.txt  suppliers.csv
apps/backend/: pyproject.toml
apps/frontend/: index.html  vite.config.ts
backend/: Dockerfile  alembic.ini  openapi.json  pyproject.toml  requirements-dev.txt  test_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: 6b08277c2c7a_initial_tables.py  8fb55de4fa16_production_v2_tier_status_citations_.py  a96b78f8e3d4_add_supplier_source_column.py  b4f7a2e9c1d3_hitl_approval_justification.py  c5e91a3f8d24_pending_clarifications.py  env.py
backend/app/: main.py
backend/app/agents/: audit_log.py  base.py  compliance_agent.py  discovery_agent.py  external_discovery_agent.py  orchestrator.py  parser_agent.py  ranking_agent.py  state.py
backend/app/agents/tools/: __init__.py  cert_taxonomy.py  geocode.py  industry_context.py  past_query_stub.py  quantity_parser.py  registry.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  metrics.py  queries.py  suppliers.py  users.py
backend/app/core/: config.py  embeddings.py  llm.py  rate_limiter.py  security.py  vector_store.py
backend/app/data/: cert_taxonomy.json
backend/app/db/: models.py  session.py
backend/app/db/repositories/: base.py  query_repo.py  supplier_repo.py  user_repo.py
backend/app/evaluation/: baselines.py  metrics.py  report.py  runner.py
backend/app/middleware/: __init__.py  request_id.py
backend/app/schemas/: auth.py  query.py  supplier.py
backend/app/services/: geocoding.py  ingestion.py  query_memory.py  sanctions.py  supplier_extraction.py  web_search.py  wikidata.py
backend/data/: evaluation_checkpoint.json  evaluation_results.json  generate_dataset.py  queries_benchmark.json  suppliers_synthetic.json  thesis_report.json
backend/experiments/: README.md  paradigm1_singleprompt.py  paradigm2_rag.py
backend/scripts/: analyze_benchmark.py  build_output_gallery.py  bulk_ingest_synthetic.py  generate_dev_token.py  generate_synthetic_suppliers.py  init_db.py  memory_demo.py  parser_react_demo.py  provider_integration_check.py  reset_data.py  run_evaluation.py  smoke_benchmark.py  smoke_test_week2.py  smoke_test_week3.py  verify_databases.py
backend/tests/: conftest.py
backend/tests/integration/: test_pipeline.py
backend/tests/unit/: test_audit_log.py  test_auth_gating.py  test_clarification_endpoint.py  test_cost_table.py  test_eval_runner.py  test_llm_providers.py  test_metrics.py  test_orchestrator_retry.py  test_paradigm_baselines.py  test_parser_clarification.py  test_parser_placeholder.py  test_parser_react.py  test_query_memory.py  test_quote_or_fail.py  test_ranking_fail_filter.py  test_rate_limiter.py  test_rbac.py  test_smoke_zero_coverage.py  test_tools.py  test_users_memory_endpoint.py
benchmarks/supplierbench25/: README.md
docs/adr/: ADR-001-model-pinning.md  ADR-002-single-provider-deployment.md
docs/supervisor/: output_gallery.md
docs/verification/: 01_provider_check.md  02_trace_comparison.md  03_smoke_benchmark.md  04_full_benchmark.md  05_benchmark_lock.md  06_sanity_checks.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/k8s/: secrets.yaml.example  (+1 more)
k8s/: backend-deployment.yaml  namespace.yaml  postgres-deployment.yaml  secrets.yaml.example
scripts/: reproduce_benchmark.ps1
(+160 files in other folders)
