[project]
name = "suppliermind"
version = "1.0.0"
description = "Multi-Agent LLM-Based Supplier Discovery"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Web Framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
    "starlette==0.37.2",
    # Data Validation
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "email-validator==2.1.1",
    # Database
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    # Agent Framework
    "langgraph==0.2.4",
    "langchain-core==0.2.27",
    # LLM
    "groq==0.9.0",
    # Embeddings
    "voyageai==0.2.3",
    # Vector Database
    "pymilvus==2.4.9",
    "chromadb==0.5.3",
    # Cache
    "redis==5.0.6",
    # Authentication
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "authlib==1.3.1",
    "httpx==0.27.0",
    "itsdangerous==2.2.0",
    # Geocoding
    "geopy==2.4.1",
    # Utilities
    "python-dotenv==1.0.1",
    "orjson==3.10.3",
    "aiohttp==3.9.5",
    "tenacity==8.3.0",
    "sse-starlette==2.1.0",
    "setuptools<70",
    "marshmallow<4",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "ruff==0.4.10",
    "pre-commit==3.7.1",
    "mypy==1.10.0",
]

[tool.ruff]
include = ["app/**/*.py", "tests/**/*.py", "data/**/*.py", "scripts/**/*.py"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N805", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--tb=short -v"